--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
         <div></div>
       </div>
     </div>
-    <!-- Shapes Lower Line -->
-    <div class="Lower-Line">
+    <!-- Shapes Middle Line -->
+    <div class="Middle-Line">
       <div class="shape-six">
         <div></div>
         <div></div>
@@ -53,6 +53,7 @@
         <div></div>
         <div></div>
       </div>
+      <!-- Advanced Hamburger -->
       <div class="shape-nine">
         <div></div>
         <div></div>
